[gd_scene load_steps=2 format=3 uid="uid://cq0pbrmvu4q4p"]

[ext_resource type="Script" uid="uid://br7lhfc670h0p" path="res://scenes/ui/inventory_scene.gd" id="1_ww7sx"]

[node name="InventoryScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ww7sx")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Túi Trữ Vật"
horizontal_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemGridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemNameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Tên Vật Phẩm"

[node name="ItemDescriptionLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Mô tả chi tiết sẽ hiện ở đây..."

[node name="ItemTypeLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Loại: ..."

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Đóng"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
